[package]
name = "pwn3proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
log4rs = "1"
bytes = "1"
thiserror = "1"
parking_lot = "0.11"
